# forsen

./: .gitignore  CMakeLists.txt  README.md
src/: Run.cpp  Run.hpp  Template.hpp  TemplateMatcher.cpp  TemplateMatcher.hpp  forsen.cpp  matching.cpp  matching.hpp  speedrun.cpp  speedrun.hpp
src/util/: Video.hpp  time.cpp  time.hpp
src/util/video/: OpenCVVideo.cpp  OpenCVVideo.hpp
